@@ -1,5 +1,6 @@
 %Document -split-max
 %Document -spray
+%Document -info-json, -page-info-json, -page-labels-json, -list-fonts-json
 \documentclass{book}
 % Edit here to produce cpdfmanual.pdf, cpdflibmanual.pdf, pycpdfmanual.pdf,
 % dotnetcpdflibmanual.pdf, jcpdflibmanual.pdf jscpdflibmanual.pdf etc.
